--- a/Ccarousel/carousel.html
+++ b/Ccarousel/carousel.html
@@ -23,6 +23,64 @@
 			.item4{
 				background: greenyellow;
 			}
+			
+			/*插件的样式,以后提取*/
+			.carousel-item{
+				position:absolute;
+				top: 0;
+				left: 0;
+				transition: all .5s;
+				-moz-transition: all .5s;
+				-webkit-transition: all .5s;
+				-o-transition: all .5s;
+				transition-duration: .5s;
+				-webkit-transition-duration: .5s;
+			}
+			.dot-list{
+				z-index:999;
+				position:absolute;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				height:20px;
+				line-height: 20px;
+				text-align:center;
+				padding: 0;
+			}
+			.dot-item{
+				display:inline-block;
+				width:10px;
+				height:10px;
+				border-radius:50%;
+				cursor:pointer;
+				border:2px solid #fff;
+				margin:0 3px;
+			}
+			.dot-item:hover,
+			.dot-item.active{
+				width:12px;
+				height:12px;
+				background: #fff;
+			}
+			.arrow{		
+				z-index: 999;		
+				position: absolute;
+				top: 50%;
+				display: inline-block;
+				width: 30px;
+				height: 30px;
+				line-height: 30px;
+				margin-top: -15px;
+				cursor: pointer;
+				font-weight: bold;
+				font-size: 30px;
+			}
+			.arrow-left{
+				left: 15px;
+			}
+			.arrow-right{
+				right: 15px;
+			}
 		</style>
 	</head>
 	<body>
@@ -39,6 +97,8 @@
 	<script type="text/javascript">
 		var carousel = new Carousel({
 			el:'#J_carousel',
+			timeSplit:5000,
+			isAuto:true
 //			width:'100%',
 //			height:'300px'
 		})
