【快排】新建数组快排/只用下标快排

--- a/quicksort/index.html
+++ b/quicksort/index.html
@@ -6,5 +6,6 @@
 	</head>
 	<body>
 	</body>
-	<script src="quicksort.js" type="text/javascript" charset="utf-8"></script>
+	<!--<script src="quicksort.js" type="text/javascript" charset="utf-8"></script>-->
+	<script src="noNewQsort.js" type="text/javascript" charset="utf-8"></script>
 </html>
